[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

[dependencies]
html5ever = "0.25.1"
surf = "1.0.3"
url = "2.1.0"
tokio = { version = "1.0", features = ["full"] }
scraper = "0.23.1"
reqwest = { version = "0.11", features = ["blocking", "json", "trust-dns"] }
rust-stemmers = "1.2.0"
csv = "1.3.1"
rayon = "1.10.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
percent-encoding = "2.3.1"
robotxt = "0.6.1"
dashmap = "6.1.0"
